--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "safecheck"
-version = "0.0.2"
+version = "0.0.3"
 description = "Utilities for typechecking, shapechecking and dispatch."
 readme = "README.md"
 authors = ["David Muhr <muhrdavid+github@gmail.com>"]
@@ -47,6 +47,7 @@ plum-dispatch = { version = "^2.2.0" }
 # testing
 pytest = "^7.4.0"
 pytest-html = "^3.2.0"
+pytest-benchmark = "^4.0.0"
 hypothesis = "^6.82.7"
 # coverage
 coverage = "^7.3.0"
