--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -14,13 +14,16 @@ tasks:
     env-remove:
         cmd: $CONDA env remove -n {{.PROJECT}} --yes
 
-    poetry-install:
+    poetry-setup:
         cmds:
             - curl -sSL https://install.python-poetry.org | python -
             - poetry config virtualenvs.create false
 
     poetry-remove:
         cmd: curl -sSL https://install.python-poetry.org | python - --uninstall
+
+    poetry-install:
+        cmd: poetry install --all-extras --with dev --no-interaction
 
     poetry-update-dev:
         cmd: poetry add pytest@latest pytest-html@latest hypothesis@latest coverage@latest pytest-cov@latest pytest-benchmark@latest coverage-badge@latest ruff@latest pre-commit@latest black@latest pyright@latest typing-extensions@latest bandit@latest safety@latest numpy@latest torch@latest jax@latest -G dev
@@ -44,7 +47,7 @@ tasks:
 
     test:
         cmds:
-            - poetry run pytest -c pyproject.toml --cov-report=html --cov={{.PROJECT}} {{.TESTS}}/
+            - poetry run pytest -rsx -c pyproject.toml --cov-report=html --cov={{.PROJECT}} {{.TESTS}}/
             - poetry run coverage-badge -o assets/coverage.svg -f
 
     lint:
@@ -65,9 +68,6 @@ tasks:
             -   task: lint
             -   task: typing
             -   task: safety
-
-    install:
-        cmd: poetry install --all-extras --with dev --no-interaction
 
     submit:
         cmds:
