--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,25 +39,26 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = ">=3.9,<3.13"
-beartype = { version = "^0.16.0" }
+beartype = { version = "^0.16" }
 jaxtyping = { version = "^0.2.24" }
+typing-extensions = { version = "^4.0" }
 
 [tool.poetry.group.dev.dependencies]
 # testing
 pytest = "^7.4.3"
 pytest-html = "^4.1.1"
 pytest-benchmark = "^4.0.0"
-hypothesis = "^6.92.1"
+hypothesis = "^6.92.2"
 # coverage
-coverage = "^7.3.3"
+coverage = "^7.4.0"
 pytest-cov = "^4.1.0"
 coverage-badge = "^1.1.0"
 # linting
-ruff = "^0.1.8"
+ruff = "^0.1.9"
 pre-commit = "^3.6.0"
-black = "^23.12.0"
+black = "^23.12.1"
 # typing
-pyright = "^1.1.342"
+pyright = "^1.1.344"
 typing-extensions = "^4.9.0"
 # safety
 bandit = "^1.7.6"
@@ -154,7 +155,7 @@ reportUntypedClassDecorator = true
 reportUntypedFunctionDecorator = true
 reportUntypedNamedTuple = true
 reportCallInDefaultInitializer = true
-reportImplicitStringConcatenation = true
+reportImplicitStringConcatenation = false
 reportMissingSuperCall = true
 reportPropertyTypeMismatch = true
 reportUninitializedInstanceVariable = true
