--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "safecheck"
-version = "0.2.0"
+version = "0.3.0"
 description = "Utilities for typechecking, shapechecking and dispatch."
 readme = "README.md"
 authors = ["David Muhr <muhrdavid+github@gmail.com>"]
@@ -39,36 +39,47 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = ">=3.9,<3.13"
-beartype = { version = "^0.16.0" }
+beartype = { version = "^0.16" }
 jaxtyping = { version = "^0.2.24" }
-plum-dispatch = { version = "^2.2.0" }
+typing-extensions = { version = "^4.0" }
 
 [tool.poetry.group.dev.dependencies]
 # testing
 pytest = "^7.4.3"
 pytest-html = "^4.1.1"
 pytest-benchmark = "^4.0.0"
-hypothesis = "^6.92.1"
+hypothesis = "^6.92.2"
 # coverage
-coverage = "^7.3.3"
+coverage = "^7.4.0"
 pytest-cov = "^4.1.0"
 coverage-badge = "^1.1.0"
 # linting
-ruff = "^0.1.8"
+ruff = "^0.1.9"
 pre-commit = "^3.6.0"
-black = "^23.12.0"
+black = "^23.12.1"
 # typing
-pyright = "^1.1.342"
+pyright = "^1.1.344"
 typing-extensions = "^4.9.0"
 # safety
 bandit = "^1.7.6"
 safety = "^2.3.5"
 # test data
 numpy = "^1.26.2"
-torch = "^2.1.2"
-jax = "^0.4.23"
+torch = [
+    { version = "^2.1.2", platform = "darwin", source = "pypi"},
+    { version = "^2.1.2", platform = "win32", source = "pypi"},
+    { version = "^2.1.2", platform = "linux", source = "pytorch-cpu"}
+]
+jax = { version = "^0.4.23", extras = ["cpu"] }
 # notebooks
 notebook = "^7.0.4"
+# profiling
+line-profiler = "^4.1.2"
+
+[[tool.poetry.source]]
+name = "pytorch-cpu"
+url = "https://download.pytorch.org/whl/cpu"
+priority = "explicit"
 
 [tool.black]
 # https://github.com/psf/black
@@ -153,7 +164,7 @@ reportUntypedClassDecorator = true
 reportUntypedFunctionDecorator = true
 reportUntypedNamedTuple = true
 reportCallInDefaultInitializer = true
-reportImplicitStringConcatenation = true
+reportImplicitStringConcatenation = false
 reportMissingSuperCall = true
 reportPropertyTypeMismatch = true
 reportUninitializedInstanceVariable = true
