--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -12,9 +12,9 @@ jobs:
             fail-fast: false
             matrix:
                 os: [ ubuntu-latest, windows-latest, macos-latest ]
-                python: [ "3.10", "3.11", "3.12" ]
+                python: [ "3.10", "3.11", "3.12", "3.13" ]
         uses: ./.github/workflows/setup.yml
         with:
             os: ${{ matrix.os }}
             python: ${{ matrix.python }}
-            command: task test && task lint
+            command: task check
