--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,11 +1,11 @@
 default_language_version:
-    python: python3.9
+    python: python3.10
 
-default_stages: [ commit, push ]
+default_stages: [ pre-commit, pre-push ]
 
 repos:
     -   repo: https://github.com/pre-commit/pre-commit-hooks
-        rev: v4.4.0
+        rev: v5.0.0
         hooks:
             -   id: check-toml
             -   id: check-yaml
@@ -19,19 +19,3 @@ repos:
                 args: [ --pytest-test-first ]
             -   id: end-of-file-fixer
                 exclude: LICENSE
-
-    -   repo: local
-        hooks:
-            -   id: ruff
-                name: ruff
-                entry: poetry run ruff check
-                types: [ python ]
-                language: system
-
-    -   repo: local
-        hooks:
-            -   id: black
-                name: black
-                entry: poetry run black --config pyproject.toml
-                types: [ python ]
-                language: system
