--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "safecheck"
-version = "0.4.0"
+version = "0.4.1"
 description = "Utilities for typechecking, shapechecking and dispatch."
 readme = "README.md"
 authors = ["David Muhr <muhrdavid+github@gmail.com>"]
@@ -26,9 +26,10 @@ classifiers = [
     "Intended Audience :: Developers",
     "Intended Audience :: Science/Research",
     "Intended Audience :: Education",
-    "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
     "Programming Language :: Python :: 3 :: Only",
     "Operating System :: Microsoft :: Windows",
     "Operating System :: POSIX",
@@ -38,39 +39,35 @@ classifiers = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.10,<3.13"
-beartype = { version = ">0.15 <0.19" }
+python = ">=3.10,<3.14"
+beartype = { version = ">0.15 <0.21" }
 jaxtyping = { version = "^0.2" }
 typing-extensions = { version = "^4.0" }
 
 [tool.poetry.group.dev.dependencies]
 # testing
-pytest = "^8.3.3"
+pytest = "^8.3.5"
 pytest-html = "^4.1.1"
-pytest-benchmark = "^4.0.0"
-hypothesis = "^6.112.1"
+pytest-benchmark = "^5.1.0"
+hypothesis = "^6.127.9"
 # coverage
-coverage = "^7.6.1"
-pytest-cov = "^5.0.0"
+coverage = "^7.6.12"
+pytest-cov = "^6.0.0"
 coverage-badge = "^1.1.2"
 # linting
-ruff = "^0.6.5"
-pre-commit = "^3.8.0"
-black = "^24.8.0"
+ruff = "^0.9.10"
+pre-commit = "^4.1.0"
+black = "^25.1.0"
 # typing
-pyright = "^1.1.380"
+pyright = "^1.1.396"
 typing-extensions = "^4.12.2"
 # safety
-bandit = "^1.7.9"
-safety = "^3.2.7"
+bandit = "^1.8.3"
+safety = "^3.3.1"
 # test data
-numpy = "^2.1.1"
-torch = [
-    { version = "^2.4.1", platform = "darwin", source = "pypi" },
-    { version = "^2.4.1", platform = "win32", source = "pypi" },
-    { version = "^2.4.1", platform = "linux", source = "pytorch-cpu" }
-]
-jax = { version = "^0.4.33", extras = ["cpu"] }
+numpy = "^2.2.3"
+torch = "^2.6.0"
+jax = "^0.5.2"
 # notebooks
 notebook = "^7.0.4"
 # profiling
@@ -110,7 +107,6 @@ lint.select = ["ALL"]
 lint.ignore = [
     "D203", # one blank line required before class docstring
     "D213", # multi line summary should start at second line
-    "ANN101", # missing type annotation for `self` in method
     "B905", # `zip()` without an explicit `strict=` parameter
 ]
 
@@ -143,7 +139,7 @@ reportMissingTypeArgument = false
 reportOverlappingOverload = true
 reportPrivateUsage = true
 reportTypeCommentUsage = "warning"
-reportUnknownArgumentType = true
+reportUnknownArgumentType = false
 reportUnknownLambdaType = false
 reportUnknownMemberType = false
 reportUnknownParameterType = false
