📌 Drop Python 3.9 support

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -60,6 +60,9 @@ tasks:
     typing:
         cmd: poetry run pyright
 
+    typing-quality:
+        cmd: poetry run pyright --ignoreexternal --verifytypes {{.PROJECT}}
+
     safety:
         cmds:
             - poetry run safety check --full-report
