--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -12,7 +12,7 @@ jobs:
             fail-fast: false
             matrix:
                 os: [ ubuntu-latest, windows-latest, macos-latest ]
-                python: [ "3.10", "3.11", "3.12", "3.13" ]
+                python: [ "3.10", "3.11", "3.12", "3.13", "3.14" ]
         uses: ./.github/workflows/setup.yml
         with:
             os: ${{ matrix.os }}
