--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "safecheck"
 version = "0.5.0"
 description = "Utilities for typechecking, shapechecking and dispatch."
 readme = "README.md"
-requires-python = ">=3.10,<3.14"
+requires-python = ">=3.10"
 license = { text = "MIT" }
 authors = [{ name = "David Muhr", email = "muhrdavid+github@gmail.com" }]
 homepage = "https://github.com/davnn/safecheck"
@@ -26,6 +26,7 @@ classifiers = [
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
+    "Programming Language :: Python :: 3.14",
     "Programming Language :: Python :: 3 :: Only",
     "Operating System :: Microsoft :: Windows",
     "Operating System :: POSIX",
@@ -35,7 +36,7 @@ classifiers = [
 ]
 
 dependencies = [
-    "beartype>0.15,<0.21",
+    "beartype>0.15",
     "jaxtyping>=0.2",
     "typing-extensions>=4.0"
 ]
