--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -28,16 +28,11 @@ jobs:
                   version: 3.x
                   repo-token: ${{ secrets.GITHUB_TOKEN }}
 
-            - name: Install uv
-              run: |
-                  curl -LsSf https://astral.sh/uv/install.sh | sh
-                  echo "${HOME}/.local/bin" >> $GITHUB_PATH
-
-            - name: Set up Python ${{ inputs.python }}
-              uses: actions/setup-python@v5
+            - name: Install UV
+              uses: astral-sh/setup-uv@v6
               with:
-                  python-version: ${{ inputs.python }}
-                  cache: "pip" # uv reuses pip’s cache structure
+                enable-cache: true
+                python-version: ${{ inputs.python }}
 
             - name: Install dependencies with uv
               run: uv sync
