⚡️ Migrate poetry to uv (#10)
* ⚡️ Swap poetry for uv

* 📌 Relax dependency requirements

* 💚 Use official uv action

* 🔖 Bump version for maintenance release [skipci]

--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -14,44 +14,29 @@ on:
                 type: string
 
 env:
-    POETRY_PYPI_TOKEN_PYPI: ${{ secrets.PYPI_TOKEN }}
+    UV_PUBLISH_TOKEN: ${{ secrets.PYPI_TOKEN }}
 
 jobs:
     setup:
         runs-on: ${{ inputs.os }}
         steps:
-            -   uses: actions/checkout@v4
+            - uses: actions/checkout@v4
 
-            -   name: Install Task
-                uses: arduino/setup-task@v1
-                with:
-                    version: 3.x
-                    repo-token: ${{ secrets.GITHUB_TOKEN }}
+            - name: Install Task
+              uses: arduino/setup-task@v1
+              with:
+                  version: 3.x
+                  repo-token: ${{ secrets.GITHUB_TOKEN }}
 
-            -   name: Install poetry
-                run: curl -sSL https://install.python-poetry.org | python3 -
+            - name: Install UV
+              uses: astral-sh/setup-uv@v6
+              with:
+                enable-cache: true
+                python-version: ${{ inputs.python }}
 
-            -   name: Set up poetry path (windows)
-                if: inputs.os == 'windows-latest'
-                run: echo "C:\Users\runneradmin\AppData\Roaming\Python\Scripts" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+            - name: Install dependencies with uv
+              run: uv sync
 
-            -   name: Set up poetry path (macos)
-                if: inputs.os == 'macos-latest'
-                run: echo "/Users/runner/.local/bin" >> $GITHUB_PATH
-
-            -   name: Set up poetry path (linux)
-                if: inputs.os == 'ubuntu-latest'
-                run: echo "/home/runner/.local/bin" >> $GITHUB_PATH
-
-            -   name: Set up Python ${{ inputs.python }}
-                uses: actions/setup-python@v5
-                with:
-                    python-version: ${{ inputs.python }}
-                    cache: "poetry"
-
-            -   name: Run install
-                run: task poetry-install
-
-            -   name: Command
-                run: ${{ inputs.command }}
-                shell: bash
+            - name: Command
+              run: ${{ inputs.command }}
+              shell: bash
