--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,7 +5,7 @@ default_stages: [ pre-commit, pre-push ]
 
 repos:
     -   repo: https://github.com/pre-commit/pre-commit-hooks
-        rev: v5.0.0
+        rev: v6.0.0
         hooks:
             -   id: check-toml
             -   id: check-yaml
@@ -19,3 +19,4 @@ repos:
                 args: [ --pytest-test-first ]
             -   id: end-of-file-fixer
                 exclude: LICENSE
+            -   id: no-commit-to-branch
